--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,12 +6,13 @@
 .container {
   width: 100%;
   min-height: 100vh;
+  background-color: #FFF0D1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .calculator {
-  background-color: blue;
+  background-color: #795757;
   padding: 25px;
   border-radius: 16px;
 }
@@ -27,7 +28,7 @@
   box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1),
     5px 5px 15px rgba(0, 0, 0, 0.2);
   background: transparent;
-  color: white;
+  color: #FFF0D1;
 }
 form .display {
   display: flex;
@@ -39,9 +40,9 @@ form .display input {
   flex: 1;
   font-size: 45px;
   box-shadow: none;
-  background-color: white;
-  color: black;
+  background-color: #3B3030;
+  color: #FFF0D1;
 }
-.equal{
-    width:200px;
+.calculator form .equal {
+  width: 145px;
 }
